--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Arimo:700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>The Office Quotes</title>
+    <title>Friends Quotes</title>
 </head>
 
 <body>
