--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>F.R.I.E.N.D.S Quotes</h1>
+    <h1><a href="https://fontmeme.com/friends-tv-series-font/"><img src="https://fontmeme.com/permalink/211018/710810dbcd9ff77143ce6e15981911ed.png" alt="friends-tv-series-font" border="0"></a></h1>
 
     <button id="btn">Get Quote</button>
 
