--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <style>
+        body {
+          background-image: url('https://github.com/havistar/randomfriendsquotes/blob/main/friends-tv-show_640.jpg?raw=true');
+        }
+        </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +15,7 @@
 </head>
 
 <body>
-    <h1><a href="https://fontmeme.com/friends-tv-series-font/"><img src="https://fontmeme.com/permalink/211018/710810dbcd9ff77143ce6e15981911ed.png" alt="friends-tv-series-font" border="0"></a></h1>
+    <h1>F.R.I.E.N.D.S Quotes</h1>
 
     <button id="btn">Get Quote</button>
 
@@ -21,3 +25,4 @@
 </body>
 
 </html>
+
