--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <embed name="Friends Intro" src="https://www.televisiontunes.com/uploads/audio/Friends.mp3" loop="false" hidden="true" autostart="true">
 <head>
     <link rel="stylesheet" href="style.css">
     <title>Friends Quotes</title>
