--- a/index.html
+++ b/index.html
@@ -9,20 +9,9 @@
 <body>
     <h1>F.R.I.E.N.D.S Quotes</h1>
 
-    <div class="container">
-        <h1>
-        <i class="fas fa-quote-left"></i>
-        <span class="quote" id="quote"></span>
-        <i class="fas fa-quote-right"></i>
-        </h1>
-        <p class="character" id="character"></p>
-        
-        <hr/>
-       
-            <!--add an onclick event on 'next quote' button-->
-            <button class="next" onclick="getQuote()">Next quote</button>
-        </div>
-    </div>
+    <button id="btn">Get Quote</button>
+
+    <div id="output"></div>
 
     <script src="index.js"></script>
 </body>
