--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <bgsound src="https://www.televisiontunes.com/uploads/audio/Friends.mp3" loop="infinite"></bgsound>
+    <embed src="https://www.televisiontunes.com/uploads/audio/Friends.mp3" autostart></embed>
 
 <head>
     <link rel="stylesheet" href="style.css">
