--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 <html lang="en">
 
 <head>
-    <div class="wrapper">
-        <div class="container">
-      
-        </div>
-      </div>
-
+   
     <link rel="stylesheet" href="style.css">
     <title>Friends Quotes</title>
 </head>
 
 <body>
     <h1>F.R.I.E.N.D.S Quotes</h1>
-    <div class="display">
 
-      </div>
     <button id="btn">Get Quote</button>
 
+    <div id="output"></div>
 
     <script src="index.js"></script>
 </body>
